fix menu item hover state that covers the rounded edges

--- a/less/dijit/definitions/modules/popup.less
+++ b/less/dijit/definitions/modules/popup.less
@@ -35,6 +35,7 @@
   font-weight: @fontWeight;
   font-style: @fontStyle;
   font-size: @medium;
+  overflow: hidden;
 } 
 
 .dijitTooltip .dijitTooltipContainer {
